# simple-rag

./: .gitignore  README.md  chunks_indexing.py  database.py  get_embedding_function.py  load.py  pyproject.toml  query_rag.py  rag_prompt_template.py  split.py
